implement missing LinkedList methods and tests